# perspective-manipulation

./: CMakeLists.txt  LICENSE  README.md  README.txt
cmake/: FindUmfpack.cmake
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt
src/cpp/optimization/: CMakeLists.txt
src/cpp/optimization/src/: mesh.cpp  vertex.cpp
src/cpp/user_interface/: CMakeLists.txt
src/cpp/user_interface/src/: interpolate.cpp  mode_manager.cpp  user_infos.cpp  window_handler.cpp
src/include/optimization/: mesh.h  vertex.h
src/include/user_interface/: interpolate.h  line.h  mode_manager.h  original_image_infos.hpp  user_infos.h  window_handler.h
